tests/error/comptime/compare_pointers8.bz
// error: invalid pointer comparison
// note: while evaluating expression at compile time
// note: lhs and rhs addresses point to different allocations
// note: lhs address points to an object in this allocation
// note: allocation was made while evaluating expression at compile time
// note: rhs address points to an object in this allocation
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p = __builtin_comptime_malloc(i32, 1);
		defer __builtin_comptime_free(p);
		let q = __builtin_comptime_malloc(i32, 1);
		defer __builtin_comptime_free(q);

		p < q;
	});
}
